<?xml version="1.0"?>
<package format="2">
  <name>manipulation_msgs</name>
  <version>0.0.0</version>
  <description>The manipulation_msgs package</description>

  <maintainer email="fperry@ethz.ch">perry</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>
