<?xml version="1.0"?>
<package format="2">
  <name>trapezoidal_tracker</name>
  <version>0.0.0</version>
  <description>Contains tools for tracking trapezoidal velocity profiles</description>

  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>manipulation_msgs</depend>
  <depend>polling_action_server</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>
